# SnapText

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  dev.bat  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
crates/snaptext-app/: Cargo.toml
crates/snaptext-app/src/: clipboard.rs  first_run.rs  hotkey.rs  logging.rs  main.rs  orchestrator.rs  tray.rs
crates/snaptext-app/src/ui/: card.rs  fonts.rs  mod.rs  onboarding.rs  overlay.rs  settings.rs  theme.rs
crates/snaptext-core/: Cargo.toml
crates/snaptext-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/snaptext-core/src/capture/: mod.rs  windows_capture.rs
crates/snaptext-core/src/history/: dao.rs  migration.rs  mod.rs  schema.sql  sqlite_store.rs
crates/snaptext-core/src/history/migrations/: V001__initial.sql  V002__image_and_lines.sql
crates/snaptext-core/src/model_manager/: downloader.rs  mod.rs
crates/snaptext-core/src/ocr/: mod.rs  paddleocr.rs  postprocess.rs  preprocess.rs
crates/snaptext-core/src/translate/: deepl.rs  fallback.rs  microsoft.rs  mod.rs  openai_compat.rs  postprocess.rs  prompt.rs
docs/: AI_GUIDE.md  CHANGELOG.md  CODE_MAP.md  CONVENTIONS.md  DESIGN.md  GLOSSARY.md  PROGRESS.md  RELEASE.md  TASKS.md
docs/TEMPLATES/: error_type.rs.tmpl  provider_impl.rs.tmpl  trait_module.rs.tmpl
scripts/: build-msi.ps1  build.bat  dev.bat  download-models.ps1  mem-diag.ps1  reset-onboarding.bat  stress-test.ps1
src/: App.vue  api.ts  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: diag.rs  main.rs  state.rs  window.rs
src-tauri/src/commands/: capture.rs  config_cmd.rs  history.rs  mod.rs  models.rs  ocr_translate.rs
src/stores/: capture.ts  config.ts
src/styles/: global.css
src/views/: Capture.vue  History.vue  Home.vue  Onboarding.vue  Result.vue  Settings.vue
wix/: main.wxs
