# SnapText workspace 根清单。
# 双 crate：snaptext-core（库，纯逻辑层）+ snaptext-app（二进制，UI + 系统集成）。
[workspace]
resolver = "2"
members = ["crates/snaptext-core", "crates/snaptext-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["SnapText"]

# 统一依赖版本，子 crate 用 { workspace = true } 引用。
[workspace.dependencies]
# 内部 crate
snaptext-core = { path = "crates/snaptext-core" }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 错误处理
thiserror = "1"
anyhow = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 图像（OCR / 截图帧）
image = "0.25"

# 平台路径解析（%APPDATA%）
dirs = "5"

# HTTP（翻译 / 模型下载；rustls 避免 OpenSSL 依赖，见 DESIGN §4）
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
# 模型完整性校验（DU-03）
sha2 = "0.10"
# 流式下载（DU-03）
futures-util = "0.3"
