[package]
name = "snaptext-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# 产出二进制名为 snaptext（见 DU-13 MSI 命名）。
[[bin]]
name = "snaptext"
path = "src/main.rs"

[dependencies]
snaptext-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
eframe = "0.30.0"
# 字体预校验：egui 解析非法字体会 panic，注入前用它试解析。egui 传递依赖，零体积成本。
ab_glyph = "0.2.32"
global-hotkey = "0.8.0"
tray-icon = "0.24.1"
arboard = "3.6.1"
single-instance = "0.3.3"
image.workspace = true
reqwest.workspace = true
