[package]
name = "snaptext-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
# Windows 截图：WGC（Graphics Capture API）+ DXGI Desktop Duplication（见 DU-02）。
windows-capture = "2.0"
# Win32 DPI 查询（GetDpiForMonitor）：算显示器 scale，供选区坐标换算。
# 与 windows-capture 共用版本（见 lock），仅启用所需 feature。
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_HiDpi"] }
# 模型下载与校验（DU-03）
reqwest = { workspace = true }
sha2 = { workspace = true }
futures-util = { workspace = true }
oar-ocr = "0.7.1" # PP-OCRv6 需 0.7+（0.6.3 仅支持 v5）
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2_sqlite = "0.25"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
r2d2 = "0.8.10"

[dev-dependencies]
tempfile = "3"
